syntax = "proto3";

package com.cognite.beam.proto;

option java_package = "com.cognite.beam.io.dto";
option java_multiple_files = true;

message RawTable {
    string db_name = 1;
    string table_name = 2;
}

