syntax = "proto3";

package com.cognite.beam.proto;

import "google/protobuf/wrappers.proto";

option java_package = "com.cognite.beam.io.dto";
option java_multiple_files = true;

message Relationship {
    enum ResourceType {
        ASSET = 0;
        TIME_SERIES = 1;
        FILE = 2;
        EVENT = 3;
        SEQUENCE = 4;
    }

    string external_id = 1;
    string source_external_id = 2;
    ResourceType source_type = 3;
    string target_external_id = 4;
    ResourceType target_type = 5;
    google.protobuf.Int64Value start_time = 6;
    google.protobuf.Int64Value end_time = 7;
    google.protobuf.FloatValue confidence = 8;
    google.protobuf.Int64Value data_set_id = 9;
    repeated string labels = 10;
    google.protobuf.Int64Value created_time = 11;
    google.protobuf.Int64Value last_updated_time = 12;
}
